[gd_scene load_steps=5 format=2]

[ext_resource path="res://GlobalTheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/MainMenu/CreditsScreen.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Titillium-Bold.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[node name="CreditsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 616.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollVBox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1280.0
margin_bottom = 616.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/ScrollContainer/ScrollVBox"]
margin_right = 1280.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/ScrollVBox"]
margin_top = 24.0
margin_right = 1280.0
margin_bottom = 45.0
bbcode_enabled = true
bbcode_text = "Credits"
text = "Credits"
fit_content_height = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/ScrollVBox"]
margin_top = 49.0
margin_right = 1280.0
margin_bottom = 53.0

[node name="ContentContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/ScrollVBox"]
margin_top = 57.0
margin_right = 1280.0
margin_bottom = 571.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/ScrollVBox/ContentContainer"]
margin_right = 1280.0
margin_bottom = 483.0
custom_fonts/bold_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]This game is very early in its development. If you are reading this - thank you!

Project started by [color=#FF6A00]Rahi[/color] aka Alexofp on 01.08.2021
Active development began on 28.12.2021

Huge thanks to [color=#00B6FF]Ferri[/color] for playtesting the earliest versions and supporting me [color=red]<3[/color]
Thanks to [color=#D375FF]Mekyro[/color] for creating [color=red]RRDC[/color], the inspiration of this game
Thanks to [url=https://www.furaffinity.net/user/bl4ckw0lf/][color=#E24646]Jacki Northstar[/color][/url] for letting me use her character
Thanks to [color=#90A9F4]Nova Dawfort[/color] for letting me use her character ^^

Thanks to [color=#0059FF]Godot team[/color] for creating the engine that this game is running on

Contributors:
Max-Maxou (sprites)
Firi (code, [url=https://github.com/Alexofp/BDCC/pull/10]#1[/url] [url=https://github.com/Alexofp/BDCC/pull/11]#2[/url] [url=https://github.com/Alexofp/BDCC/pull/12]#3[/url] [url=https://github.com/Alexofp/BDCC/pull/13]#4[/url] [url=https://github.com/Alexofp/BDCC/pull/14]#5[/url])
Niel (code, [url=https://github.com/Alexofp/BDCC/pull/17]#1[/url])
PeteTimesSix (visible chains, [url=https://github.com/Alexofp/BDCC/pull/25]#1[/url] [url=https://github.com/Alexofp/BDCC/pull/26]#2[/url] [url=https://github.com/Alexofp/BDCC/pull/27]#3[/url] [url=https://github.com/Alexofp/BDCC/pull/29]#4[/url] [url=https://github.com/Alexofp/BDCC/pull/30]#5[/url] [url=https://github.com/Alexofp/BDCC/pull/31]#6[/url] [url=https://github.com/Alexofp/BDCC/pull/33]#7[/url] [url=https://github.com/Alexofp/BDCC/pull/35]#8[/url] [url=https://github.com/Alexofp/BDCC/pull/36]#9[/url])
Rayforward ([url=https://github.com/Alexofp/BDCC/pull/34]#1[/url] [url=https://github.com/Alexofp/BDCC/pull/37]#2[/url])

The game uses some icons from [url=https://game-icons.net/]game-icons.net[/url] and [url=https://www.flaticon.com/]flaticon.com[/url]

Thanks to everyone else who I probably forgot..
[/center]"
text = "This game is very early in its development. If you are reading this - thank you!

Project started by Rahi aka Alexofp on 01.08.2021
Active development began on 28.12.2021

Huge thanks to Ferri for playtesting the earliest versions and supporting me <3
Thanks to Mekyro for creating RRDC, the inspiration of this game
Thanks to Jacki Northstar for letting me use her character
Thanks to Nova Dawfort for letting me use her character ^^

Thanks to Godot team for creating the engine that this game is running on

Contributors:
Max-Maxou (sprites)
Firi (code, #1 #2 #3 #4 #5)
Niel (code, #1)
PeteTimesSix (visible chains, #1 #2 #3 #4 #5 #6 #7 #8 #9)
Rayforward (#1 #2)

The game uses some icons from game-icons.net and flaticon.com

Thanks to everyone else who I probably forgot..
"
fit_content_height = true

[node name="DonationsLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/ScrollVBox/ContentContainer"]
margin_top = 493.0
margin_right = 1280.0
margin_bottom = 514.0
custom_fonts/bold_font = SubResource( 1 )
bbcode_enabled = true
fit_content_height = true

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 620.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 100 )
columns = 5

[node name="CloseButton" type="Button" parent="VBoxContainer/GridContainer"]
margin_right = 256.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Close"

[node name="SupportRahiButton" type="Button" parent="VBoxContainer/GridContainer"]
margin_left = 260.0
margin_right = 515.0
margin_bottom = 26.0
hint_tooltip = "In case you like my work and wanna support me <3"
size_flags_horizontal = 3
text = "Support Rahi"

[connection signal="meta_clicked" from="VBoxContainer/ScrollContainer/ScrollVBox/ContentContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="meta_clicked" from="VBoxContainer/ScrollContainer/ScrollVBox/ContentContainer/DonationsLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="pressed" from="VBoxContainer/GridContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/SupportRahiButton" to="." method="_on_SupportRahiButton_pressed"]
